Feat: Adicionei filtros por tipo de destino

--- a/src/styles/thumb.css
+++ b/src/styles/thumb.css
@@ -1,6 +1,7 @@
 .thumb-container {
     display: flex;
     width: 100%;
+    height: 100%;
     align-items: center;
     margin: 20px;
     box-shadow: 1px 1px 1px 1px #ccc;
